src/tui/tests/snapshots/bmm__tui__tests__actions__failed_copy_shows_an_error.snap
---
source: src/tui/tests/actions.rs
expression: terminal.backend()
---
"                                                                                                                        "
"   bookmarks  (2)                                                                                                       "
"                                                                                                                        "
"> https://www.rust-lang.org/                                                                                            "
"  https://gleam.run/                                                                                                    "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"┌ details ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│ URI   : https://www.rust-lang.org/                                                                                   │"
"│ Title : Rust                                                                                                         │"
"│ Tags  : rust,programming                                                                                             │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" bmm  couldn't copy uri to clipboard: clipboard unavailable                                                             "
